--- a/css/nav.css
+++ b/css/nav.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-around;
     width: 100%;
+    height: 120px;
     background-color: #bebebea6;
     border-radius: 20px;
     height: auto;
@@ -49,7 +50,7 @@
 
 @media (max-width: 1300px) {
     #navbarNav ul li a {
-        margin: 0px;
+        margin: 5px;
     }
 }
 
@@ -61,7 +62,7 @@
         align-items: center;
         background-color: #bebebea6;
         backdrop-filter: none;
-        height: auto;
+        height: autopx;
     }
 
     .custom-nav .navbar-brand {
