--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
 footer {
     background-color: #191818;
     padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .logo-footer {
@@ -51,4 +52,49 @@ footer {
 
 .footer-social-content {
     margin-bottom: 46px;
+}
+
+@media (max-width: 840px) {
+    .footer-content {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 770px) {
+    #FAQ .faq-title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 630px) {
+    #FAQ .faq-title {
+        font-size: 36px;
+    }
+}
+
+@media (max-width: 550px) {
+    #FAQ .faq-title {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 540px) {
+    .adress-footer {
+        flex-direction: column;
+    }
+
+    .footer-social-content {
+        margin-bottom: 0px;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 470px) {
+    #FAQ .faq-title {
+        font-size: 20px;
+    }
+
+    .faq-desc {
+        text-align: center;
+    }
 }
