--- a/css/main.css
+++ b/css/main.css
@@ -67,19 +67,22 @@ main {
 
 @media (max-width: 590px) {
     main ul li {
-        font-size: 40px;
+        font-size: 41px;
     }
 }
 
 @media (max-width: 490px) {
     main ul li {
-        font-size: 30px;
+        font-size: 36px;
     }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 450px) {
     main ul li {
-        font-size: 20px;
+        font-size: 30px;
+    }
+    main ul{
+        padding: 0px;
     }
 }
 
@@ -332,10 +335,10 @@ main {
 	justify-content: flex-end;
 }
 
-/* Responsividade para telas menores que 1000px */
+
 @media (max-width: 1200px) {
     .servicos_box {
-        grid-template-columns: 1fr; /* As caixas vão ficar empilhadas uma abaixo da outra */
+        grid-template-columns: 1fr;
         grid-template-rows: auto;
     }
 
@@ -345,11 +348,11 @@ main {
     .servicos_box4 {
         width: 100%;
         height: auto;
-        margin: 15px 0; /* Ajuste o espaçamento entre as caixas */
+        margin: 15px 0; 
     }
 
     .servicos_title {
-        font-size: 40px; /* Diminui o tamanho da fonte do título */
+        font-size: 40px; 
     }
 
     .servicos_desc {
@@ -357,15 +360,15 @@ main {
     }
 }
 
-/* Responsividade para telas menores que 768px */
+
 @media (max-width: 768px) {
     .servicos_desc {
         width: 100%;
-        font-size: 16px; /* Ajusta o tamanho da descrição */
+        font-size: 16px;
     }
 
     .servicos_box {
-        grid-template-columns: 1fr; /* Exibe as caixas em uma única coluna */
+        grid-template-columns: 1fr;
     }
 
     .servicos_box1,
@@ -378,27 +381,27 @@ main {
     }
 
     .box_image {
-        width: 100%; /* Ajusta a largura da imagem para 100% em telas pequenas */
+        width: 100%; 
         height: 166px;
     }
 }
 
-/* Responsividade para telas menores que 480px */
+
 @media (max-width: 480px) {
     .servicos_title {
-        font-size: 28px; /* Título menor */
+        font-size: 28px;
     }
 
     .servicos_desc {
-        font-size: 14px; /* Texto da descrição menor */
+        font-size: 14px;
     }
 
     .box_tittle {
-        font-size: 22px; /* Título das caixas menor */
+        font-size: 22px;
     }
 
     .box_desc {
-        font-size: 14px; /* Descrição da caixa menor */
+        font-size: 14px;
     }
 
     .box_image {
@@ -406,3 +409,37 @@ main {
         height: 166px;
     }
 }
+
+
+@media (max-width: 380px) {
+
+    .box_tittle {
+        font-size: 20px;
+    }
+    
+}
+
+
+@media (max-width: 330px) {
+    .box_image {
+        width: 200px;
+        height: 160px;
+    }
+}
+
+
+
+@media (max-width: 320px) {
+
+    .box_tittle {
+        font-size: 18px;
+        margin-bottom: 0px;
+        padding: 0px 20px 0px 20px;
+    }
+    
+    .box_desc {
+        font-size: 12px;
+        padding: 0px 20px 0px 20px;
+    }
+ }
+ 
