--- a/css/faq.css
+++ b/css/faq.css
@@ -51,3 +51,11 @@ button.accordion-button::after {
 #FAQ .accordion-button, .accordion-body{
     border-radius: 10px;
 }
+
+
+@media (max-width: 1200px) {
+    #FAQ .container {
+        width: 75%;
+    }
+    
+}
