--- a/css/main.css
+++ b/css/main.css
@@ -104,11 +104,12 @@ main {
 }
 
 .sobre_nos_image {
-    width: 275px;
-    height: 438px;
-    background-color: #d9d9d9;
-    border-radius: 20px;
-    object-fit: cover;
+    display: flex;
+}
+
+.image_animator {
+        padding-bottom: 50px;
+        scale: 1.3;
 }
 
 .sobre_nos_title {
@@ -137,11 +138,8 @@ main {
 }
 
 .integrante_image {
-    width: 275px;
-    height: 303px;
-    background-color: #d9d9d9;
-    border-radius: 20px;
-    object-fit: cover;
+   
+    scale: 1.5;
 }
 
 .integrante_title {
@@ -166,12 +164,6 @@ main {
 
     .sobre_nos_text {
         margin-left: 0;
-        margin-bottom: 20px;
-    }
-
-    .sobre_nos_image {
-        width: 100%;
-        height: 300px;
         margin-bottom: 20px;
     }
 
@@ -206,6 +198,11 @@ main {
     .integrante_desc {
         font-size: 16px;
         width: 100%;
+    }
+
+    .sobre_nos_image {
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -326,13 +323,30 @@ main {
 	text-align: center;
 }
 
-.box_image {
+.box_image1, .box_image2,.box_image3, .box_image4 {
 	background-color: #d9d9d9;
 	width: 100%;
 	height: 166px;
 	border-radius: 100px;
 	display: flex;
 	justify-content: flex-end;
+}
+
+.box_image1{
+    background-image: url(/Interisght-Co.-main/Imagens/DesenvolvimentoDeApps.jpg);
+    background-size: cover;
+}
+.box_image2{
+    background-image: url(/Interisght-Co.-main/Imagens/GerencimanetoDeMidias.jpg);
+    background-size: cover;
+}
+.box_image3{
+    background-image: url(/Interisght-Co.-main/Imagens/DesenvolvimentoWeb.jpg);
+    background-size: cover;
+}
+.box_image4{
+    background-image: url(/Interisght-Co.-main/Imagens/AutomaçaoWeb.jpg);
+    background-size: cover;
 }
 
 
@@ -380,10 +394,6 @@ main {
         margin: 15px 0;
     }
 
-    .box_image {
-        width: 100%; 
-        height: 166px;
-    }
 }
 
 
